# esp_aws_driver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/ma_jobs_agent/: CMakeLists.txt  ma_jobAgent.c  ma_jobOTA.c  ma_jobParser.c
components/ma_jobs_agent/include/: ma_jobAgent.h  ma_jobOTA.h  ma_jobParser.h
main/: CMakeLists.txt  Kconfig.projbuild  example_driver.c
